fixed gap again

--- a/css/style.css
+++ b/css/style.css
@@ -427,9 +427,8 @@ body{
     gap:7px;
 }
 .money-4{
-    display: grid;
-    /* flex-direction: column; */
-    grid-template-rows:36vh 6vh;
+    display: flex;
+    flex-direction: column;
     gap:7px;
 }
 .maca{
